--- a/root/index.html
+++ b/root/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ava Template</title>
+    <title>Visual Process Analytics Workshop</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|Roboto:500" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -18,7 +18,7 @@
                         <h1 class="m-0">
                             <a href="#">
                                 <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                                    <title>Ava</title>
+                                    <title>Visual Process Analytics</title>
                                     <defs>
                                         <linearGradient x1="100%" y1="0%" x2="0%" y2="100%" id="logo-gradient-b">
                                             <stop stop-color="#39D8C8" offset="0%"/>
@@ -50,16 +50,8 @@
             <section class="hero text-center">
                 <div class="container-sm">
                     <div class="hero-inner">
-                        <h1 class="hero-title h2-mobile mt-0 is-revealing">Landing template for startups</h1>
-                        <p class="hero-paragraph is-revealing">Our landing page template works for all the devices, so you only have to setup it once, and get beautiful results forever.</p>
-                        <div class="hero-form newsletter-form field field-grouped is-revealing">
-                            <div class="control control-expanded">
-                                <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
-                            </div>
-                            <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">Get early access</a>
-                            </div>
-                        </div>
+                        <h1 class="hero-title h2-mobile mt-0 is-revealing">EuroVis 2024 Workshop</h1>
+                        <p class="hero-paragraph is-revealing">Some description of the workshop.</p>
                         <div class="hero-browser">
                             <div class="bubble-3 is-revealing">
                                 <svg width="427" height="286" viewBox="0 0 427 286" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
