--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">1st Visual Process Analytics Workshop</span></h2>
-          <p class="animate__animated animate__fadeInUp">Co-Located with <a href="">EuroVis 2024</a></p>
+          <p class="animate__animated animate__fadeInUp">Co-Located with <a href="https://www.eurovis.org/eurovis" target="blank">EuroVis 2024</a></p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Call for Papers</a>
         </div>
       </div>
@@ -144,35 +144,48 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <div class="icon"><i class="bx bx-objects-vertical-bottom"></i></div>
+              <h4 class="title"><a href="">Visual Analytics +</a></h4>
+              <p class="description">Visual analytics is an interdisciplinary field that combines data visualization, analytical techniques, and interactive interfaces to help people make sense of complex and often large datasets.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <div class="icon"><i class="bx bx-log-in-circle"></i></div>
+              <h4 class="title"><a href="">Process Mining</a></h4>
+              <p class="description">Process Mining is a data-driven discipline that focuses on extracting valuable insights and knowledge from the vast amount of event data generated within organizations.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4 class="title"><a href="">(Short) Paper types</a></h4>
+              <p class="description">
+			  <ul>
+                <li>Application/Case-study papers (5+1)</li>
+                <li>Research papers (5+1)</li>
+                <li>Position papers and system demos papers (2+1)</li>
+              </ul>			  
+			  </p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <div class="icon"><i class="bx bx-calendar"></i></div>
+              <h4 class="title"><a href="">Important Dates</a></h4>
+              <p class="description">
+			  <ul>
+                <li>Deadline for submission: <b>March 1st, 2024</b></li>
+                <li>Notification of acceptance: <b>April 12th, 2024</b></li>
+                <li>Vipra 2024 Workshop: <br/><b>May 27th, 2024</b></li>
+              </ul>
+			  </p>
             </div>
           </div>
 
