Fixed images and added everyones website.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-objects-vertical-bottom"></i></div>
-              <h4 class="title"><a href="">Visual Analytics +</a></h4>
+              <h4 class="title"><a href="">Visual Analytics <i class="bx bx-right-arrow"></i></a></h4>
               <p class="description">Visual analytics is an interdisciplinary field that combines data visualization, analytical techniques, and interactive interfaces to help people make sense of complex and often large datasets.</p>
             </div>
           </div>
@@ -156,7 +156,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-log-in-circle"></i></div>
-              <h4 class="title"><a href="">Process Mining</a></h4>
+              <h4 class="title"><a href=""><i class="bx bx-left-arrow"></i>Process Mining</a></h4>
               <p class="description">Process Mining is a data-driven discipline that focuses on extracting valuable insights and knowledge from the vast amount of event data generated within organizations.</p>
             </div>
           </div>
@@ -659,12 +659,13 @@
                 <h4>Stef van den Elzen</h4>
                 <!--<span>Chief Executive Officer</span>-->
                 <p>Asst. Prof. at TU Eindhoven</p>
-                <!--<div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>-->
+                <div class="social">
+                  <a href="https://www.win.tue.nl/~selzen/" target="blank"><i class="ri-account-pin-circle-fill"></i></a>
+				  <a href="https://twitter.com/StefvandenElzen" target="blank"><i class="ri-twitter-fill"></i></a>
+                  <!--a href=""><i class="ri-facebook-fill"></i></a>
+                  <a href=""><i class="ri-instagram-fill"></i></a-->
+                  <a href="https://www.linkedin.com/in/sjvdelzen/" target="blank"> <i class="ri-linkedin-box-fill"></i></a>
+                </div>				
               </div>
             </div>
           </div>
@@ -677,10 +678,11 @@
                 <!--<span>Product Manager</span>-->
                 <p>Post-doc researcher at TU Vienna</p>
                 <div class="social">
+                  <a href="https://alessioarleo.com/" target="blank"><i class="ri-account-pin-circle-fill"></i></a>
                   <!--<a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
                   <a href=""><i class="ri-instagram-fill"></i></a>-->
-                  <a href="https://www.linkedin.com/in/ingarleo"> <i class="ri-linkedin-box-fill"></i> </a>
+                  <a href="https://www.linkedin.com/in/ingarleo" target="blank"> <i class="ri-linkedin-box-fill"></i> </a>
                 </div>
               </div>
             </div>
@@ -693,12 +695,13 @@
                 <h4>Tatiana von Landesberger</h4>
                 <!--<span>CTO</span>-->
                 <p>Associate Prof. at Univ. of Cologne</p>
-                <!--<div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
+                <div class="social">
+				  <a href="https://visva.cs.uni-koeln.de/en/team/profin-dr-tatiana-von-landesberger" target="blank"><i class="ri-account-pin-circle-fill"></i></a>
+                  <!--a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
                   <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>-->
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a-->
+                </div>
               </div>
             </div>
           </div>
@@ -710,12 +713,13 @@
                 <h4>Jana-Rebecca Rehse</h4>
                 <!--<span>Accountant</span>-->
                 <p>Junior Prof. at Univ. of Mannheim</p>
-                <!--<div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
+                <div class="social">
+				  <a href="https://www.bwl.uni-mannheim.de/rehse/" target="blank"><i class="ri-account-pin-circle-fill"></i></a>
+                  <!--a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
                   <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>-->
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a-->
+                </div>
               </div>
             </div>
           </div>
@@ -727,12 +731,13 @@
                 <h4>Francesca Zerbato</h4>
                 <!--<span>Accountant</span>-->
                 <p>Senior Researcher at Univ. of St. Gallen</p>
-                <!--<div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
+                <div class="social">
+				  <a href="https://www.alexandria.unisg.ch/entities/person/Francesca_Zerbato" target="blank"><i class="ri-account-pin-circle-fill"></i></a>
+                  <!--a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
                   <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>-->
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a-->
+                </div>
               </div>
             </div>
           </div>
@@ -744,12 +749,13 @@
                 <h4>Luise Pufhal</h4>
                 <!--<span>Accountant</span>-->
                 <p>Prof. at Univ. of München</p>
-                <!--<div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
+                <div class="social">
+				  <a href="https://www.professoren.tum.de/pufahl-luise" target="blank"><i class="ri-account-pin-circle-fill"></i></a>
+                  <!--a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
                   <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>-->
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a-->
+                </div>
               </div>
             </div>
           </div>
