Fixed name Luise

--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/luise.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Luise Pufhal</h4>
+                <h4>Luise Pufahl</h4>
                 <!--<span>Accountant</span>-->
                 <p>Prof. at Univ. of München</p>
                 <div class="social">
