Updated publication details

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Paper Format and Submission Guidelines</h2>
+            <h2>Paper Format, Publication, and Submission Guidelines</h2>
             <p>
               We will accept short papers with up to 5 pages plus one page of references (5 + 1).
 
@@ -273,6 +273,7 @@
 
               All material will be submitted via the <a href="https://new.precisionconference.com/submissions">Precision Conference System (PCS)</a>
               
+              Accepted papers will be included in the <a href="https://diglib.eg.org/">Eurographics Digital Library</a> and assigned a DOI as fully citable publications.
 
               For all submissions, please use the EuroVis 2024 LateX2e Style. On Overleaf, this template can be imported easily by selecting "New Project" -> "Upload Project" and uploading the zip file. Use EGAuthorGuidelines-eurovis24-short.tex for your submission.                         
               
