Updated Alessio position

--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
               <div class="member-info">
                 <h4>Alessio Arleo</h4>
                 <!--<span>Product Manager</span>-->
-                <p>Post-doc researcher at TU Vienna</p>
+                <p>Asst. Prof. at TU Eindhoven</p>
                 <div class="social">
                   <a href="https://alessioarleo.com/" target="blank"><i class="ri-account-pin-circle-fill"></i></a>
                   <!--<a href=""><i class="ri-twitter-fill"></i></a>
