Updated program committee

--- a/index.html
+++ b/index.html
@@ -323,20 +323,22 @@
             Andrea Burattin, Technical University of Denmark<br/>
             Francisco Maria Calisto, University of<br/>
             Davide Ceneda, Technical University of Vienna<br/>
-            Jan Mendling, Humboldt-Universität zu Berlin<br/>            
-            Catagay Turkay, University of Warwick<br/>
+            Jan Mendling, Humboldt-Universität zu Berlin<br/>          
+	    Velitchko Filipov, Technical University of Vienna</br>
             Katerina Vrotsou, Linköping University<br/>
             Barbara Weber, University of St. Gallen<br/>
           </div>
           
           <div class="col-lg-6 pt-4 pt-lg-0" style="font-size: larger";>
               Silvia Miksch, Technical University of Vienna<br/>
+	      Catagay Turkay, University of Warwick<br/>		  
               Manuel Resinas, University of Sevilla<br/>
               Daniel Schuster, Fraunhofer FIT - University of Aachen<br/>
               Pnina Soffer, University of Haifa<br/>
               Christian Tominski, University of Rostock<br/>
               Sebastian Van Zelst, Celonis Labs - München<br/>
               Mari-Cruz Villa-Uriol, University of Sheffield<br/>
+	      Davide Ceneda, Technical University of Vienna<br/>
           </div>
         </div>
           
