Updated website with new deadline.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
               <h4 class="title"><a href="">Important Dates</a></h4>
               <p class="description">
 			  <ul>
-                <li>Deadline for submission: <b>March 1st, 2024</b></li>
+                <li>Deadline for submission: <b><s>March 1st, 2024</s></b></br>
+				<b style="color: red;">March 8th, 2024</b></li>
                 <li>Notification of acceptance: <b>April 12th, 2024</b></li>
                 <li>Vipra 2024 Workshop: <br/><b>May 27th, 2024</b></li>
               </ul>
@@ -294,7 +295,7 @@
               All submission deadlines are at 23:59 GMT on the date indicated.
 
               <ul>
-                <li><i class="ri-check-double-line"></i> Deadline for submission: March 1st, 2024</li>
+                <li><i class="ri-check-double-line"></i> Deadline for submission: <b style="color: red;">March 8th, 2024 (deadline extended)</b></li>
                 <li><i class="ri-check-double-line"></i> Notification of acceptance: April 12th, 2024</li>
                 <li><i class="ri-check-double-line"></i> Vipra 2024 Workshop: May 27th, 2024 (in conjunction with EuroVis 2024)</li>
               </ul>
