Fixed typo on home

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#program">Program</a></li>		
-          li><a class="nav-link scrollto" href="#keynote">Keynote</a></li>
+          <li><a class="nav-link scrollto" href="#keynote">Keynote</a></li>
           <li><a class="nav-link scrollto" href="#about">Call for Papers</a></li>
           <li><a class="nav-link scrollto" href="#deadlines">For Submitters</a></li>
           <li><a class="nav-link scrollto " href="#committees">Intl. Program Committee</a></li>
