--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 <li><i class="ri-check-double-line"></i> R. Brinkman, F. Mannhardt, R. J. P. Mennens, R. Scheepens. <b>Interpretability challenges for discovered process models: A user study and prototype solution</b></li>
               </ul>
 
-              <h3>Session 2</h3>
+              <h3>Session 2: Start 11:10AM</h3>
               <p>              
                 <ul>
                   <li><i class="ri-check-double-line"></i> R. Brath, P. Andersen, M. Matusiak. <b>Visual Journey Analytics: lessons learned from real-world implementations</b></li>                  
