--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Paper types</a></h4>
               <p class="description">
-			  <ul>
-                <li>Application/Case-study papers (5+1)</li>
-                <li>Research papers (5+1)</li>
-                <li>Position papers and system demos papers (2+1)</li>
-              </ul>			  
-			  </p>
+                <ul>
+                  <li>Regular papers (LNBIP, 12-15 pages)</li>
+                  <li>Short papers (LNBIP 6-11 pages)</li>
+                  <li>Position papers and system demos papers (2+1)</li>
+                </ul>			  
+			        </p>
             </div>
           </div>
 
@@ -268,16 +268,18 @@
               We encourage a diverse range of submissions and demonstrations in any of the short paper types listed below:
 
               <ul>
-                <li><i class="ri-check-double-line"></i> Application/Case-study papers (format: 5 + 1)</li>
-                <li><i class="ri-check-double-line"></i> Research papers (format: 5 + 1)</li>
-                <li><i class="ri-check-double-line"></i> Position papers and system demos papers (format: 2 + 1)</li>
+                <li>Regular papers (LNBIP, 12-15 pages)</li>
+                <li>Short papers (LNBIP 6-11 pages)</li>
+                <li>Position papers and system demos papers (2+1)</li>
               </ul>
 
               All material will be submitted via the <a href="https://easychair.org/conferences/?conf=bpm2025">BPM 2025 EasyChair submission site.</a><br/><br/>
               
               Selected accepted papers will be included in the conference proceedings and assigned a DOI as fully citable publications.<br/><br/>
 
-              All submission must comply with the Springer <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS formatting guidelines</a>.
+              All submission must comply with the Springer <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">LNCS formatting guidelines</a>.<br/><br/>
+
+              Selected accepted regular and short papers will be published by Springer as a post-workshop proceedings volume in the series Lecture Notes in Business Information Processing (LNBIP). <u>At least one author of each accepted paper must register and participate in the workshop</u>.
               
               <div style="text-align: center;">
                 <a href="https://easychair.org/conferences/?conf=bpm2025" class="btn-learn-more">Submit Paper</a>
