--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <p class="description">
                 <ul>
                   <li>Regular papers (LNBIP, 12-15 pages)</li>
-                  <li>Short papers (LNBIP 6-11 pages)</li>
+                  <li>Short papers (LNBIP 6-8 pages)</li>
                 </ul>			  
 			        </p>
             </div>
@@ -276,7 +276,7 @@
 
               <ul>
                 <li>Regular papers (LNBIP, 12-15 pages)</li>
-                <li>Short papers (LNBIP 6-11 pages)</li>
+                <li>Short papers (LNBIP, 6-8 pages)</li>
               </ul>
 
               All material will be submitted via the <a href="https://easychair.org/conferences/?conf=bpm2025">BPM 2025 EasyChair submission site.</a><br/><br/>
