--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">2nd Visual Process Analytics Workshop</span></h2>
-          <p class="animate__animated animate__fadeInUp">Co-Located with <a style="color:'yellow'" href="https://www.bpm2025seville.org/" target="blank">BPM 2025</a></p>
+          <p class="animate__animated animate__fadeInUp">Co-Located with <a style="color: white;text-decoration-line: underline;" href="https://www.bpm2025seville.org/" target="blank">BPM 2025</a></p>
           <!--<a href="#program" class="btn-get-started animate__animated animate__fadeInUp scrollto">Go To Program</a>-->
         </div>
       </div>
