Updated 1st to 2nd annual workshop in CfP

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="row content">
           <div class="col-lg-12">
             <p>
-              The 2025 Workshop on Visual Process Analytics (Vipra 2025) is the 1st annual workshop that provides an opportunity for participants to discuss state-of-the-art event visualization and process mining and learn how both techniques can mutually benefit each other. In this workshop we aim to bring together researchers from both Visual Analytics and Process Mining, to learn, create a common language, spark collaborations, and advance both fields.
+              The 2025 Workshop on Visual Process Analytics (Vipra 2025) is the 2nd annual workshop that provides an opportunity for participants to discuss state-of-the-art event visualization and process mining and learn how both techniques can mutually benefit each other. In this workshop we aim to bring together researchers from both Visual Analytics and Process Mining, to learn, create a common language, spark collaborations, and advance both fields.
 			  <br/><br/>
 			</p>
 			</div>
