Small changes to tfpm appearance

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <h2 class="animate__animated animate__fadeInDown">2nd Visual Process Analytics Workshop</span></h2>
           <p class="animate__animated animate__fadeInUp">Co-Located with <a style="color: white;text-decoration-line: underline;" href="https://www.bpm2025seville.org/" target="blank">BPM 2025</a></p>
 	  <p class="animate__animated animate__fadeInUp" style="font-size: large">Event Endorsed By:</p>
-	  <a class="animate__animated animate__fadeInUp" href="https://www.tf-pm.org/"><img style="width: 325px" src="assets/tfpm.png"/></a>
+	  <a class="animate__animated animate__fadeInUp" href="https://www.tf-pm.org/"><img style="width: 350px;padding: 5px;background: white;border-radius: 5px;" src="assets/tfpm.png"/></a>
           <!--<a href="#program" class="btn-get-started animate__animated animate__fadeInUp scrollto">Go To Program</a>-->
         </div>
       </div>
