--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
               <h4 class="title"><a href="">Important Dates</a></h4>
               <p class="description">
 			  <ul>
-                <li>Deadline for submission: <b>June 6th, 2025</b></br>
-                <li>Notification of acceptance: <b>July 3rd, 2025</b></li>
-				<li>Camera ready-papers: <b>July 11th, 2025</b></li>
+                <li style="color:red">Deadline for submission: <b>June 13th, 2025</b></br></li>
+                <li style="color:red">Notification of acceptance: <b>July 10rd, 2025</b></li>
+				<li style="color:red">Camera ready-papers: <b>July 18th, 2025</b></li>
                 <li>Vipra 2025 Workshop: <br/><b>September 1st, 2025</b></li>
               </ul>
 			  </p>
