--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               <p class="description">
 			  <ul>
                 <li style="color:red">Deadline for submission: <b>June 13th, 2025</b></br></li>
-                <li style="color:red">Notification of acceptance: <b>July 10rd, 2025</b></li>
+                <li style="color:red">Notification of acceptance: <b>July 10th, 2025</b></li>
 				<li style="color:red">Camera ready-papers: <b>July 18th, 2025</b></li>
                 <li>Vipra 2025 Workshop: <br/><b>September 1st, 2025</b></li>
               </ul>
