--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
               <h4 class="title"><a href="">Important Dates</a></h4>
               <p class="description">
 			  <ul>
-                <li style="color:red">Deadline for submission: <b>TBD</b></br></li>
-                <li style="color:red">Notification of acceptance: <b>TBD</b></li>
-				<li style="color:red">Camera ready-papers: <b>TBD</b></li>
+                <li>Deadline for submission: <b>TBD</b></br></li>
+                <li>Notification of acceptance: <b>TBD</b></li>
+			        	<li>Camera ready-papers: <b>TBD</b></li>
                 <li>Vipra 2026 Workshop: <br/><b>TBD</b></li>
               </ul>
 			  </p>
@@ -210,7 +210,7 @@
         <div class="row content">
           <div class="col-lg-12">
             <p>
-              The 2026 Workshop on Visual Process Analytics (Vipra 2026) is the 2nd annual workshop that provides an opportunity for participants to discuss state-of-the-art event visualization and process mining and learn how both techniques can mutually benefit each other. In this workshop we aim to bring together researchers from both Visual Analytics and Process Mining, to learn, create a common language, spark collaborations, and advance both fields.
+              The 2026 Workshop on Visual Process Analytics (Vipra 2026) is the 3rd annual workshop that provides an opportunity for participants to discuss state-of-the-art event visualization and process mining and learn how both techniques can mutually benefit each other. In this workshop we aim to bring together researchers from both Visual Analytics and Process Mining, to learn, create a common language, spark collaborations, and advance both fields.
 			  <br/><br/>
 			</p>
 			</div>
@@ -544,8 +544,8 @@
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Past Editions</h4>
               <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="editions/2024/index.html">2024</a></li>
                 <li><i class="bx bx-chevron-right"></i> <a href="editions/2025/index.html">2025</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="editions/2024/index.html">2024</a></li>
               </ul>
             </div>
 
