--- a/index.html
+++ b/index.html
@@ -70,26 +70,6 @@
           <li><a class="nav-link scrollto" href="#program">Program</a></li>		
           <li><a class="nav-link scrollto " href="#committees">Intl. Program Committee</a></li>
           <li><a class="nav-link scrollto" href="#team">Organizing Committee</a></li>
-          <!--<li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>-->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -326,7 +306,9 @@
 
         <div class="section-title">
           <h2>Program</h2>
-          <p>VIPRA will take place co-located with the <a href="https://eurovis.org.uk/">EuroVIS 2026 conference</a>. 
+          <p>VIPRA will take place co-located with the <a href="https://eurovis.org.uk/">EuroVIS 2026 conference</a>.</br>
+            TBD
+          </p> 
         </div>
 
 		  <!--<div class="row content justify-content-center">	  
