--- a/index.html
+++ b/index.html
@@ -92,32 +92,6 @@
         </div>
       </div>
 
-      <!-- Slide 2 
-      <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
-        </div>
-      </div>
-
-      <!-- Slide 3 
-      <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
-        </div>
-      </div>
-
-      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
-      </a>
-
-      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
-      </a>-->
-
     </div>
   </section><!-- End Hero -->
 
@@ -151,9 +125,10 @@
               <h4 class="title"><a href="">Paper types</a></h4>
               <p class="description">
                 <ul>
-                  <li>Regular papers (TBD)</li>
-                  <li>Short papers (TBD)</li>
-                </ul>			  
+                  <li>Application/Case-study papers (5+1)</li>
+                  <li>Research papers (5+1)</li>
+                  <li>Position papers and system demos papers (2+1)</li>
+                </ul>					  
 			        </p>
             </div>
           </div>
@@ -161,13 +136,13 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-calendar"></i></div>
-              <h4 class="title"><a href="">Important Dates</a></h4>
+              <h4 class="title"><a href="">Important Dates (2026)</a></h4>
               <p class="description">
 			  <ul>
-                <li>Deadline for submission: <b>TBD</b></br></li>
-                <li>Notification of acceptance: <b>TBD</b></li>
-			        	<li>Camera ready-papers: <b>TBD</b></li>
-                <li>Vipra 2026 Workshop: <br/><b>TBD</b></li>
+                <li>Deadline for submission: <b>March 2nd</b></br></li>
+                <li>Notification of acceptance: <b>April 27th</b></li>
+			        	<li>Camera ready-papers: <b>May 11th</b></li>
+                <li>Vipra 2026 Workshop: <br/><b>June 8th</b></li>
               </ul>
 			  </p>
             </div>
@@ -255,13 +230,14 @@
               <!--We will accept short papers with up to 8 pages and regular papers with up to 15 pages.-->
 
               We encourage a diverse range of submissions and topics in any of the paper types listed below:
-
+              
               <ul>
-                <li>Regular papers (TBD)</li>
-                <li>Short papers (TBD)</li>
+                <li><i class="ri-check-double-line"></i> Application/Case-study papers (format: 5 + 1)</li>
+                <li><i class="ri-check-double-line"></i> Research papers (format: 5 + 1)</li>
+                <li><i class="ri-check-double-line"></i> Position papers and system demos papers (format: 2 + 1)</li>
               </ul>
 
-              All material will be submitted via the <a href="https://new.precisionconference.com/submissions">Precision Conference submission site. Select "Eurographics" Society, "EuroVis 2026" conference, and VIPRA track. </a><br/><br/>
+              All material will be submitted via the <a href="https://new.precisionconference.com/submissions">Precision Conference submission site</a>. Select "Eurographics" Society, "EuroVis 2026" conference, and VIPRA track.<br/><br/>
               
               Accepted papers will be included in the <a href="https://diglib.eg.org/">Eurographics Digital Library</a> and assigned a DOI as fully citable publications.<br/><br/>
 
