small cosmetic updates

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
               <h4 class="title"><a href="">Important Dates (2026)</a></h4>
               <p class="description">
 			  <ul>
-                <li>Deadline for submission: <b>March 2nd</b></br></li>
-                <li>Notification of acceptance: <b>April 27th</b></li>
-			        	<li>Camera ready-papers: <b>May 11th</b></li>
-                <li>Vipra 2026 Workshop: <br/><b>June 8th</b></li>
+                <li>Deadline for submission:<b><br/>March 2nd</b></br></li>
+                <li>Notification of acceptance:<br/><b>April 27th</b></li>
+			        	<li>Camera ready-papers:<br/><b>May 11th</b></li>
+                <li>Vipra 2026 Workshop:<br/><br/><b>June 8th</b></li>
               </ul>
 			  </p>
             </div>
